added session recording
